frontend/stylesheets/_dashboard.less
@smartphones: ~"only screen and (max-width: 600px)";

.publication-description :first-child {
  margin-top: 0px;
}

.gallery-dataset-col {
  padding-bottom: 24px;

  @media @smartphones {
    padding-bottom: 32px;
  }
}

.absolute {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.dataset-thumbnail {
  flex: 3;
  display: inline-block;
  background-color: #e8e8e8;

  @media @smartphones {
    height: 55%;
    width: 100%;
    display: block;
  }
}

.dataset-thumbnail-image {
  transition: transform 0.3s ease-in-out;
  background-size: cover;
  &.segmentation {
    opacity: 0.2;
  }
}

.dataset-thumbnail-overlay {
  display: flex;
  flex-direction: column;
  flex: 1;
  height: 100px;
  margin: 10px;
  border-radius: 3px;
  background-color: rgba(35, 33, 33, 0.77);
  padding: 5px 15px;
  color: rgba(255, 255, 255, 0.95);
  z-index: 101;
}

.datasets-scrollbar-spacer {
  background: linear-gradient(
    to left,
    rgba(0, 0, 0, 0.7) 0%,
    rgba(0, 0, 0, 0.7) 70%,
    rgba(0, 0, 0, 0) 100%
  );
  width: 112px;
  height: 100%;
  z-index: 101;
}

.dataset-published-grid {
  position: absolute;
  padding: 4px;
  margin-right: 7px;
  height: 100%;
  overflow-y: auto;
  display: flex;
  justify-content: center;

  &::-webkit-scrollbar-button {
    display: block;
    height: 5px;
    border-radius: 0px;
    background-color: rgba(255, 255, 255, 0);
  }
  &::-webkit-scrollbar-button:hover {
    background-color: rgba(255, 255, 255, 0);
  }
  &::-webkit-scrollbar-thumb {
    background-color: #ccc;
    border-radius: 5px;
  }
  &::-webkit-scrollbar-thumb:hover {
    background-color: #9c9c9c;
    border-radius: 5px;
  }
  &::-webkit-scrollbar-track {
    background-color: rgba(255, 255, 255, 0);
  }
  &::-webkit-scrollbar-track:hover {
    background-color: rgba(255, 255, 255, 0);
  }
  &::-webkit-scrollbar {
    width: 10px;
  }
}

.dataset-click-hint {
  opacity: 0;
  text-align: center;
  color: white;
  z-index: 100;
  line-height: 400px;
  font-size: 20px;

  &:hover {
    background-color: rgba(0, 0, 0, 0.6);
    opacity: 1;
  }
}

.publication-description {
  display: flex;
  flex-direction: column;
  flex: 2;
  height: 100%;
  padding: 16px;
  overflow-y: auto;
  background-color: white;
  z-index: 1;
  @media @smartphones {
    padding-top: 24px;
    padding-left: 24px;
  }

  @media @smartphones {
    height: 45%;
    width: 100%;
    display: block;
  }

  h3 {
    font-size: 20px;
    margin-bottom: 0px;
    padding-bottom: 16px;
    padding-right: 16px;
    word-wrap: break-word;
    @media @smartphones {
      font-size: 32px;
      padding-bottom: 24px;
    }
  }

  .publication-description-body {
    width: 100%;
    overflow-y: auto;
    @media @smartphones {
      height: 243px;
    }
  }

  p {
    font-size: 14px;

    @media @smartphones {
      font-size: 18px;
    }
  }
}

.antd-spotlight-popover-card {
  .ant-popover-inner-content {
    padding: 0;
  }
  .ant-popover-inner {
    overflow: hidden;
  }

  .ant-popover-inner,
  .ant-popover-arrow {
    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.85);
  }

  h3 {
    font-size: 18px;
  }
  .publication-description-body {
    font-size: 10px;
  }
  .publication-description {
    padding: 4px;
  }
}

.spotlight-popover-card {
  height: 200px;
  width: 400px;
  position: relative;
  overflow: hidden;
}

.spotlight-item-card {
  height: 400px;
  width: 100%;
  position: relative;
  overflow: hidden;
  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
  border-radius: 6px;

  &:hover {
    box-shadow: 0 4px 6px hsla(0, 0%, 0%, 0.22), 0 5px 15px hsla(0, 0%, 0%, 0.1);
    transform: translateY(-2px);

    .dataset-thumbnail-image {
      transform: scale(1.1);
      filter: contrast(1.1);
    }
  }

  @media @smartphones {
    height: 700px;
  }

  .ant-card-body {
    width: 100%;
    height: 100%;
  }
}

.mini-dataset-thumbnail-grid {
  display: grid;
  grid-gap: 10px;
  padding: 5px;
  margin-top: auto;
}

.mini-dataset-thumbnail {
  opacity: 0.5;
  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
  background-size: cover;

  &.segmentation {
    opacity: 0.2 !important;
  }
  &:hover,
  &.active {
    opacity: 1;
  }
  &:active {
    transform: scale(1.05);
  }
}

.dataset-actions {
  a {
    display: block;
    img {
      width: 14px;
    }
  }
}

.task-type-description {
  word-break: break-word;

  &.short {
    max-height: 150px;
    overflow-y: auto;
  }

  ul {
    list-style: disc;
    padding-left: 2em;
  }

  ol {
    list-style: decimal;
    padding-left: 2em;
  }
}

.spotlight-hero-button {
  margin-right: 50px;
  color: rgba(255, 255, 255, 0.8);

  &:hover {
    color: rgba(255, 255, 255, 1);
  }
}

